--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1>Tilfluktsrom Data API</h1>
 <ul>
 <li><a href="sweden_shelters.json">Swedish Shelters (GeoJSON)</a></li>
+<li><a href="denmark_shelters.json">Denmark Shelters (GeoJSON)></a></li>
 </ul>
 </body>
 </html>
